@@ -19,28 +19,19 @@ ext{
     //the build number that this mod is made for
     mindustryVersion = 'v146'
     jabelVersion = "93fde537c7"
+    //windows sucks
+    isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
 
 //java 8 backwards compatibility flag
 allprojects{
     tasks.withType(JavaCompile){
-    	options.fork = true
-    	options.forkOptions.jvmArgs.addAll([
-    	"--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-    	"--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-    	"--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-    	"--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-    	"--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-    	"--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-  	])
-
         options.compilerArgs.addAll(['--release', '8'])
     }
 }
 
 dependencies{
-
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
 
@@ -69,8 +60,10 @@ task jarAndroid{
         //collect dependencies needed for desugaring
         def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
 
+        def d8 = isWindows ? "d8.bat" : "d8"
+
         //dex and desugar files - this requires d8 in your PATH
-        "d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
+        "$d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
             .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
     }
 }
@@ -82,7 +75,7 @@ jar{
         configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
     }
 
-    from(rootDir){
+    from(projectDir){
         include "mod.hjson"
     }
 
